# agentkit

./: CHANGELOG.md  Cargo.toml  README.md  STANDARDS.md
.github/workflows/: ci.yml
src/: lib.rs
src/adapters/: mod.rs
src/adapters/llm/: mod.rs
src/adapters/memory/: mod.rs
src/application/: mod.rs
src/domain/: mod.rs
src/domain/agents/: mod.rs
src/domain/context/: mod.rs
src/domain/errors/: mod.rs
src/domain/events/: mod.rs
src/domain/memory/: mod.rs
src/domain/ports/: mod.rs
src/domain/skills/: mod.rs
src/domain/tools/: mod.rs
src/infrastructure/: error.rs  mod.rs
