[package]
name = "agentkit"
version = "0.1.0"
edition = "2021"
authors = ["Phenotype Engineering"]
description = "Agent framework with skill system and tool registry"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/agentkit"
documentation = "https://docs.rs/agentkit"
keywords = ["agent", "ai", "framework", "skills", "tools"]
categories = ["artificial-intelligence", "development-tools"]

[dependencies]
# Core domain
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Application
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"

# LLM support (optional)
reqwest = { version = "0.11", features = ["json"], optional = true }

# Memory backends (optional)
redis = { version = "0.23", optional = true }
rusqlite = { version = "0.29", optional = true }

[dev-dependencies]
proptest = "1.0"
tokio-test = "0.4"
mockall = "0.11"

[features]
default = []
openai = ["reqwest"]
redis-memory = ["redis"]
sqlite-memory = ["rusqlite"]

[[bin]]
name = "agentkit"
path = "src/bin/main.rs"

[lib]
name = "agentkit"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
